k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:  # This pod tells Kubernetes it needs some persistent volume
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:   # How to use storage inside the container
            - name: postgres-storage  # Need to be same as spec.volumes[0].name
              mountPath: /var/lib/postgresql/data  # Designates where inside the container the storage should be made available. Anything stored at the path will be stored inside the volume.
              subPath: postgres   # Any data stored inside the container at mountPath will be stored inside a folder called postgres inside the actual persistent volume claim
